<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/appbar_padding"
    android:orientation="vertical"
    tools:context=".View.User.ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profil" />

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:tint="@color/red"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_exit_to_app_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/firstname_txt" />

            <TextView
                android:id="@+id/firstname_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/lastname_txt" />

            <TextView
                android:id="@+id/lastname_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/login_txt" />

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="@dimen/activity_large_vertical_margin"
        android:text="@string/settings" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_marginTop="@dimen/textview_margin"
        android:text="@string/change_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.EditText.Filled"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/current_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.EditText.Filled"
        app:passwordToggleEnabled="true"
        android:hint="@string/new_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/edit"/>

    </RelativeLayout>

</LinearLayout>