<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.AchievedService.AchievedServiceDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/appbar_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/statut_txt" />

            <TextView
                android:id="@+id/statut_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/cost_txt" />

            <TextView
                android:id="@+id/cost_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Bold"
                android:text="@string/done_at_txt" />

            <TextView
                android:id="@+id/done_at_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textview_margin"
                android:text="" />

        </LinearLayout>


        <TextView
            android:id="@+id/details_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:id="@+id/votes_wrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_padding"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:text="@string/votes" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/accept" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_refused"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/red"
                    android:text="@string/refuse" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>