<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Colocation.ColocationDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:background="@color/white"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/colocation_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Design.TabLayout"
            android:background="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/members"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/services"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_acieved_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"/>

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>